# vision_app

./: .gitignore  CMakeLists.txt  README.md  camera_combo_CMakeLists.txt  camera_combo_main.cpp  eval_export_cls.py  files.txt  ken_test.py  live_tune_aug.py  merge_hard_examples.py  prepare_cls_dataset.py  run_retrain_pipeline.py  system_config.sample.json  take_pic.py  vision_app.conf
2026_SmartCar_Loongson_Object_Recognition-main/2026_SmartCar_Loongson_Object_Recognition-main/: aug_config.json  eval_export_cls.py  live_tune_aug.py  picker.py  prepare_cls_dataset.py  train_export_summary.json
2026_SmartCar_Loongson_Object_Recognition-main/2026_SmartCar_Loongson_Object_Recognition-main/dataset_cls/: dataset_summary.json  test.cache  train.cache  val.cache
2026_SmartCar_Loongson_Object_Recognition-main/2026_SmartCar_Loongson_Object_Recognition-main/dataset_cls/test_split/: val.cache
2026_SmartCar_Loongson_Object_Recognition-main/2026_SmartCar_Loongson_Object_Recognition-main/generated_datasets/dataset_cls__v2__px100__aug5__split801010__seed42/: dataset_summary.json
2026_SmartCar_Loongson_Object_Recognition-main/2026_SmartCar_Loongson_Object_Recognition-main/generated_datasets/dataset_cls__v3__dt20260406_193829__px40__tr5__va5__te5__seed42/: class_to_idx.json  dataset_summary.json  labels.txt
2026_SmartCar_Loongson_Object_Recognition-main/2026_SmartCar_Loongson_Object_Recognition-main/generated_datasets/dataset_cls__v3__px100__tr5__va5__te5__seed42/: dataset_summary.json
2026_SmartCar_Loongson_Object_Recognition-main/2026_SmartCar_Loongson_Object_Recognition-main/generated_datasets/dataset_cls__v3__px128__tr5__va5__te5__seed42/: class_to_idx.json  dataset_summary.json  test.cache  train.cache  val.cache
2026_SmartCar_Loongson_Object_Recognition-main/2026_SmartCar_Loongson_Object_Recognition-main/generated_datasets/dataset_cls__v3__px40__tr5__va5__te5__seed42/: dataset_summary.json  test.cache  train.cache  val.cache
2026_SmartCar_Loongson_Object_Recognition-main/2026_SmartCar_Loongson_Object_Recognition-main/img_dataset/D-警棍/: Thumbs.db
cmake/: FindONNXRuntime.cmake
config/: profile.conf  profile.example.conf  system_config.sample.json
configs/: pi5_fast.conf  probe_bench.conf  vision_app.conf  vision_app_v2_stacked.ini
docs/: ARCHITECTURE.md  DYNAMIC_RED_X_PLAN.md  FUNCTIONS.md  FUNCTION_MAP.md  INTERACTION.md  OPTIMIZATION_NOTES.md  PARAMETERS.md  PARAMETER_REFERENCE.md  STATE_MACHINE.md  VISUAL_INTERACTION.md
inc/: app.hpp  app_config.hpp  calibration.h  calibration.hpp  camera.h  camera.hpp  camera_capture.hpp  camera_probe.hpp  camera_test.hpp  cli.hpp  config.h  config.hpp  constants.hpp  deploy.h  deploy.hpp  homography.h  probe.hpp  report_writer.hpp  roi_selector.hpp  stats.hpp  tag_detector.hpp  types.hpp  utils.hpp  vision_app.hpp  warp.hpp
include/: app_calib.hpp  app_camera.hpp  app_config.hpp  app_deploy.hpp  app_test.hpp  config.hpp  modes.hpp  params.hpp  red_trigger.hpp  roi_runtime.hpp  text_console.hpp
include/vision_app/: calibrate.hpp  deploy.hpp  model.hpp  onnx_classifier.hpp  text_console.hpp
laptop_tools/: controller_server.py  quick_train.py
legacy/windows_tag_ui/: CMakeLists.txt  main.cpp
models/: model.ncnn.param
models/128/: labels.txt
python/: pi5_dual_motor_pwm.py
src/: app.cpp  app_calib.cpp  app_camera.cpp  app_config.cpp  app_config.hpp  app_deploy.cpp  app_main.cpp  app_test.cpp  app_types.hpp  automation.hpp  calibrate.hpp  calibration.cpp  camera.cpp  camera.hpp  camera_capture.cpp  camera_probe.cpp  camera_test.cpp  classifier_common.hpp  cli.cpp  config.cpp  deploy.cpp  deploy.hpp  deploy_runtime.hpp  homography.cpp  main.c  main.cpp  model.cpp  model.hpp  modes.cpp  ncnn_classifier.hpp  onnx_classifier.hpp  probe.cpp  red_trigger.cpp  report_writer.cpp  roi_helper.cpp  roi_runtime.cpp  roi_selector.cpp  stats.cpp  stats.hpp  status_ui.cpp  (+7 more)
test/: CMakeLists.txt  README.md  compare_backends_cli.py  eval_classifier_cli.py
test/portable_cls_infer_bundle/: README.md
test/portable_cls_infer_bundle/src/: main.cpp
test/src/: classifier_common.hpp  main.cpp  ncnn_classifier.hpp  onnx_classifier.hpp
test/tools/: compare_backends.py
training_tools/: eval_export_cls.py  live_tune_aug.py  merge_hard_examples.py  merge_session_into_dataset.py  prepare_cls_dataset.py  run_retrain_pipeline.py
vision_app_py/: README.md  probe.json  requirements.txt  vision_app_py.py
vision_app_py/report/: vision_app_calibration.json
(+47 files in other folders)
